# BLAFS_filesystem

./: README.md
conda/linux/: environment.yml
fuse_example/: CMakeLists.txt  README.md  fuse_example.c  run.sh
hook_getdents64/: Makefile  hidefile.c
simple_file_reader/: CMakeLists.txt  README.md  main.cpp  run.sh
simple_file_reader/_debloated_docker/: Dockerfile  build.sh
simple_file_reader/_docker/: Dockerfile  build.sh
simple_file_reader/_ubuntu_docker/: Dockerfile  build.sh
simple_lkm/: Makefile  hello.c
src/cpp/: CMakeLists.txt  README.md  cached_fs.cc  debloated_fs.cc  file_meta.cc  file_meta.h  file_meta_test.cc  file_registry.cc  file_registry.h  file_registry_test.cc  hello_test.cc  run.sh  sftp_client.cc  sftp_client.h
src/golang/patch_container/: clean.sh  file_registry.txt  go.mod  go.sum  patch_container.go  patch_container_test.go  run.sh
src/golang/sftp_fileserver/: go.mod  id_rsa  id_rsa.pub  main.go  run.sh
src/golang/sftp_fileserver/_docker/: Dockerfile  build.sh
test_overlay/: run.sh
